# backend/docs/swagger.json
@@ -34,9 +34,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "JWT token",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/api.authResponse"
                         }
                     },
                     "400": {
@@ -74,9 +74,9 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "new user",
+                        "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/api.userResponse"
+                            "$ref": "#/definitions/api.authResponse"
                         }
                     },
                     "400": {
@@ -104,6 +104,17 @@
                 "status": {
                     "description": "user-level status message",
                     "type": "string"
+                }
+            }
+        },
+        "api.authResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/api.userResponse"
                 }
             }
         },
